# Luciole

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt  build_debug.sh  build_debug_test.sh  build_debug_with_test.sh  build_release.sh  build_release_test.sh  log.txt
TWE/: TWE.h  TWE_core.h  application.h  console.h  entry_point.h  event.h  log.h  pipeline.h  renderer.h  vertex.h  vk_pipeline.h  vk_pipeline_manager.h  vk_shader.h  vk_shader_manager.h  vk_utils.h  vulkan_core.h  vulkan_utils.h  window.h
cmake/: FindXCB.cmake
debug/: CMakeCache.txt  Makefile  TWE.cbp  cmake_install.cmake
demo/: CMakeLists.txt  main.cpp
demo/resources/: triangle_pipeline.json  wireframe_triangle_pipeline.json
demo/resources/meshes/: monkey.glb
demo/resources/shaders/: frag.spv  triangle_main.frag.glsl  triangle_main.vert.glsl  vert.spv
engine/: console.cpp  console.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  renderer.cpp  renderer.h  vulkan_core.cpp  vulkan_core.h  vulkan_utils.h  window.cpp  window.h
examples/triangle/: CMakeLists.txt  main.cpp
includes/: luciole.hpp  luciole_core.hpp
luciole/: CMakeLists.txt  application.cpp  application.hpp  context.cpp  context.hpp  extension.hpp  layer.hpp  luciole_core.hpp  main.cpp  strong_types.hpp  thread_pool.cpp  thread_pool.hpp
luciole/graphics/: context.cpp  context.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp
luciole/memory/: memory_pool.cpp  memory_pool.hpp
luciole/source/luciole/: context.cpp  context.hpp  device.cpp  device.hpp  extensions.hpp  instance.cpp  instance.hpp  layers.hpp  luciole.hpp  luciole_core.hpp  surface.cpp  surface.hpp
luciole/source/luciole/graphics/: context.cpp  context.hpp  mesh.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  vertex.hpp
luciole/source/luciole/utilities/: basic_error.cpp  basic_error.hpp  delegate.hpp  file_io.hpp  log.hpp  message.hpp
luciole/source/luciole/vulkan/: context.cpp  context.hpp  device.cpp  device.hpp  error.cpp  error.hpp  extensions.hpp  instance.cpp  instance.hpp  layers.hpp  memory_allocator.cpp  memory_allocator.hpp  mesh_buffer.cpp  mesh_buffer.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.hpp  pipeline_manager.cpp  pipeline_manager.hpp  queue.hpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  uniform_buffers.cpp  uniform_buffers.hpp  utils.hpp  vulkan.hpp
luciole/source/luciole/vulkan/vma/: vk_mem_alloc.h  vma_define.cpp
luciole/source/luciole/window/: base_window.cpp  base_window.hpp  event.hpp  keyboard.hpp  mouse.hpp  wayland_window.cpp  wayland_window.hpp  win32_window.cpp  win32_window.hpp  xcb_window.cpp  xcb_window.hpp
luciole/threads/: atomic_queue.hpp  thread_pool.hpp
luciole/utilities/: log.hpp  message.hpp
luciole/vulkan/: command_pool.hpp  errors.hpp  queue.cpp  queue.hpp  utils.hpp
luciole/window/: base_window.cpp  base_window.hpp  event.hpp  keyboard.hpp  win32_window.cpp  win32_window.hpp  window.cpp  window.hpp  xcb_window.cpp  xcb_window.hpp
marsupial/: CMakeLists.txt
marsupial/source/marsupial/: application.cpp  application.hpp  entry_point.hpp  marsupial.hpp  marsupial_core.hpp
marsupial/source/marsupial/graphics/: mesh.hpp  renderer.cpp  renderer.hpp  vertex.hpp
marsupial/source/marsupial/utilities/: basic_error.cpp  basic_error.hpp  delegate.hpp  file_io.hpp  log.hpp  message.hpp
marsupial/source/marsupial/vulkan/: buffer.hpp  context.cpp  context.hpp  error.cpp  error.hpp  memory_allocator.cpp  memory_allocator.hpp  mesh_buffer.cpp  mesh_buffer.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.hpp  pipeline_manager.cpp  pipeline_manager.hpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  swapchain.cpp  swapchain.hpp  utils.hpp  vertex_buffer.cpp  vertex_buffer.hpp
marsupial/source/marsupial/window/: base_window.cpp  base_window.hpp  event.hpp  keyboard.hpp  mouse.hpp  wayland_window.cpp  wayland_window.hpp  win32_window.cpp  win32_window.hpp  xcb_window.cpp  xcb_window.hpp
release/: CMakeCache.txt  Makefile  TWE.cbp  cmake_install.cmake
scripts/: build_debug.sh  build_debug_test.sh  build_release.sh  build_release_test.sh  compile_commands.json
source/: TWE.cpp  application.cpp  console.cpp  log.cpp  pipeline.cpp  renderer.cpp  shader.cpp  window.cpp  (+5 more)
twe/: CMakeLists.txt  TWE.h  application.h  renderer.h  vk_utils.h  window.h
twe/graphics/: pipeline.h  pipeline_manager.h  shader.h  shader_manager.h
twe/source/twe/: TWE.h  TWE_core.h  application.cpp  application.h  application.hpp  entry_point.h  entry_point.hpp  keyboard.h  log.cpp  log.h  message.h  mouse.h  pipeline.hpp  pipeline_layout.hpp  pipeline_manager.cpp  pipeline_manager.hpp  renderer.cpp  renderer.h  shader.hpp  shader_manager.cpp  shader_manager.hpp  twe.hpp  twe_core.hpp  vertex.h  vk_utils.h
twe/source/twe/graphics/: mesh.hpp  pipeline.cpp  pipeline_manager.cpp  pipeline_manager.h  renderer.cpp  renderer.hpp  shader.cpp  shader_manager.cpp  vertex.hpp  vertex_buffer.cpp  vertex_buffer.hpp
twe/source/twe/utilities/: basic_error.cpp  basic_error.hpp  delegate.hpp  file_io.hpp  log.cpp  log.hpp  message.hpp  vk_error.cpp  vk_error.h  vk_error.hpp  vk_utils.hpp
twe/source/twe/vulkan/: context.cpp  context.hpp  core.hpp  error.cpp  error.hpp  memory_allocator.cpp  memory_allocator.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.hpp  pipeline_manager.cpp  pipeline_manager.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  swapchain.cpp  swapchain.hpp  utils.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vk_mem_alloc.h  vk_memory_allocator.cpp  vk_memory_allocator.hpp  vk_queue.hpp  vma_define.cpp  vulkan.hpp
twe/source/twe/vulkan/volk/: volk.c
twe/source/twe/window/: base_window.cpp  base_window.hpp  event.hpp  keyboard.hpp  mouse.hpp  wayland_window.cpp  wayland_window.hpp  win32_window.cpp  win32_window.hpp  xcb_window.cpp  xcb_window.hpp
twe/utilities/: basic_error.h  delegate.h  file_io.h
twe/window/: base_window.h  event.h  win32_window.h  xcb_window.h
(+154 files in other folders)
